Fix navlink dark mode issues

--- a/src/app/components/maps/maps.component.css
+++ b/src/app/components/maps/maps.component.css
@@ -109,3 +109,36 @@
   background-color: var(--bs-body-bg);
   border: var(--bs-border-width) solid var(--bs-border-color);
 }
+
+::ng-deep .dx-button-text {
+  font-size: var(--bs-body-font-size);
+  font-family: var(--bs-body-font-family);
+  font-weight: var(--bs-body-font-weight);
+  color: var(--bs-body-color);
+  transition: .2s ease-in-out;
+  border: var(--bs-border-width) 1px var(--bs-border-color) !important;
+  background: transparent;
+}
+
+::ng-deep .dx-buttongroup-item {
+  background-color: transparent !important;
+}
+
+::ng-deep .dx-buttongroup-item.dx-item-selected {
+  background-color: var(--bs-pink) !important;
+}
+
+::ng-deep .dx-item-selected .dx-button-text {
+  color: white;
+}
+
+
+::ng-deep .dx-button-mode-contained.dx-buttongroup-first-item.dx-button, .dx-button-mode-contained.dx-buttongroup-first-item.dx-state-hover .dx-button-content, .dx-button-mode-outlined.dx-buttongroup-first-item.dx-button, .dx-button-mode-outlined.dx-buttongroup-first-item.dx-state-hover .dx-button-content {
+  border-top-left-radius: .375rem !important;
+  border-bottom-left-radius: .375rem !important;
+}
+
+::ng-deep .dx-button-mode-contained.dx-buttongroup-last-item.dx-button, .dx-button-mode-contained.dx-buttongroup-last-item.dx-state-hover .dx-button-content, .dx-button-mode-outlined.dx-buttongroup-last-item.dx-button, .dx-button-mode-outlined.dx-buttongroup-last-item.dx-state-hover .dx-button-content {
+  border-top-right-radius: .375rem !important;
+  border-bottom-right-radius: .375rem !important;
+}
